BREAKING CHANGE: The long anticipated item, mob, class, balance rework (#1095)
Co-authored-by: NobodyPi <officialnobodypi@gmail.com>
Co-authored-by: Fwap_a_Durp <derpderp0000@gmail.com>
Co-authored-by: Peter Güttinger <njol@gmx.ch>
Co-authored-by: dmdinnc <38630939+dmdinnc@users.noreply.github.com>
Co-authored-by: Nobody314159 <84757662+Nobody314159@users.noreply.github.com>
Co-authored-by: Byron Marohn <combustible@live.com>
Co-authored-by: ShadowVisions <32822992+ShadowVisions@users.noreply.github.com>
Co-authored-by: Ako-Tako <52047104+Ako-Tako@users.noreply.github.com>
Co-authored-by: Fabio Bocci <74119740+FabioBocci@users.noreply.github.com>
Co-authored-by: Timothy Southwick <NickNackGus@gmail.com>
Co-authored-by: Xinfu32 <41170034+Xinfu32@users.noreply.github.com>